Added commenting to the application.properties file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 # MySQL Configuration
+//this is the sign in information for mysql to allow database to be built and ran through it
+//must give location of of mysql which is localhost 3306 and sign in with own info
 spring.datasource.url=jdbc:mysql://localhost:3306/patientDirectory
 spring.datasource.username=jas5632
-//signs into mysql
 spring.datasource.password=Carolhann5632$
-//sign into mysql
+//the "true" lets you see the sql queries when jpa executes queries
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 //ensure when the site is visited it updates the data instead of re-creating each time
 spirng.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+//specifies the dialect you are using, mysql5****
